==> turumputum/button_module/Drivers/apds_9960/apds9960.c <==
#include "stm32f4xx.h"
#include "stdlib.h"
#include "apds9960.h"
#include "stdio.h"
#define DEBUGPRINT 1

uint8_t i2c1_read(uint8_t memAdr, uint8_t *regData, uint8_t lenght) {
	if (HAL_I2C_Mem_Read(&hi2c1, sensorAdr, memAdr, 1, regData, lenght, HAL_MAX_DELAY) == HAL_OK) {
		return lenght;
	} else {
		return 0;
	}
}

uint8_t i2c1_write(uint8_t memAdr, uint8_t regData) {
	if (HAL_I2C_Mem_Write(&hi2c1, sensorAdr, memAdr, 1, &regData, 1, HAL_MAX_DELAY) == HAL_OK) {
		return 1;
	} else {
		return 0;
	}
}

int apds9960init(void) {
	uint8_t id;
	//ledSetLeftLed(LED_ON);

	/* Initialize I2C */

	for (int i = 0; i < 255; i++) {
		HAL_Delay(1);

		if (HAL_I2C_IsDeviceReady(&hi2c1, i, 3, HAL_MAX_DELAY) == 0) {
			sensorAdr = i;
			printf("Sensor found on adress^ %d/%x\r\n", sensorAdr, (sensorAdr >> 1));
			break;
		}

	}

	/* Read ID register and check against known values for APDS-9960 */
	if (i2c1_read(APDS9960_ID, &id, 1) == 0) {
		printf("read sensor ID failed at %d\r\n", id);
		return 0;

	}

	if (!(id == APDS9960_ID_1 || id == APDS9960_ID_2 || id == APDS9960_ID_3)) {
		return 0;
	}

	/* Set ENABLE register to 0 (disable all features) */
	if (!setMode(ALL, OFF)) {
		return 0;
	}

	/* Set default values for ambient light and proximity registers */
	if (!i2c1_write(APDS9960_ATIME, DEFAULT_ATIME)) {
		return 0;
	}
	if (!i2c1_write(APDS9960_WTIME, DEFAULT_WTIME)) {
		return 0;
	}
	if (!i2c1_write(APDS9960_PPULSE, DEFAULT_PROX_PPULSE)) {
		return 0;
	}
	if (!i2c1_write(APDS9960_POFFSET_UR, DEFAULT_POFFSET_UR)) {
		return 0;
	}
	if (!i2c1_write(APDS9960_POFFSET_DL, DEFAULT_POFFSET_DL)) {
		return 0;
	}
	if (!i2c1_write(APDS9960_CONFIG1, DEFAULT_CONFIG1)) {
		return 0;
	}
	if (!setLEDDrive(DEFAULT_LDRIVE)) {
		return 0;
	}
	if (!setProximityGain(DEFAULT_PGAIN)) {
		return 0;
	}
	if (!setAmbientLightGain(DEFAULT_AGAIN)) {
		return 0;
	}
	if (!setProxIntLowThresh(DEFAULT_PILT)) {
		return 0;
	}
	if (!setProxIntHighThresh(DEFAULT_PIHT)) {
		return 0;
	}
	if (!setLightIntLowThreshold(DEFAULT_AILT)) {
		return 0;
	}
	if (!setLightIntHighThreshold(DEFAULT_AIHT)) {
		return 0;
	}
	if (!i2c1_write(APDS9960_PERS, DEFAULT_PERS)) {
		return 0;
	}
	if (!i2c1_write(APDS9960_CONFIG2, DEFAULT_CONFIG2)) {
		return 0;
	}
	if (!i2c1_write(APDS9960_CONFIG3, DEFAULT_CONFIG3)) {
		return 0;
	}

	/* Set default values for gesture sense registers */
	if (!setGestureEnterThresh(DEFAULT_GPENTH)) {
		return 0;
	}
	if (!setGestureExitThresh(DEFAULT_GEXTH)) {
		return 0;
	}
	if (!i2c1_write(APDS9960_GCONF1, DEFAULT_GCONF1)) {
		return 0;
	}
	if (!setGestureGain(DEFAULT_GGAIN)) {
		return 0;
	}
	if (!setGestureLEDDrive(DEFAULT_GLDRIVE)) {
		return 0;
	}
	if (!setGestureWaitTime(DEFAULT_GWTIME)) {
		return 0;
	}
	if (!i2c1_write(APDS9960_GOFFSET_U, DEFAULT_GOFFSET)) {
		return 0;
	}
	if (!i2c1_write(APDS9960_GOFFSET_D, DEFAULT_GOFFSET)) {
		return 0;
	}
	if (!i2c1_write(APDS9960_GOFFSET_L, DEFAULT_GOFFSET)) {
		return 0;
	}
	if (!i2c1_write(APDS9960_GOFFSET_R, DEFAULT_GOFFSET)) {
		return 0;
	}
	if (!i2c1_write(APDS9960_GPULSE, DEFAULT_GPULSE)) {
		return 0;
	}
	if (!i2c1_write(APDS9960_GCONF3, DEFAULT_GCONF3)) {
		return 0;
	}
	if (!setGestureIntEnable(DEFAULT_GIEN)) {
		return 0;
	}

	return 1;
}

int enableGestureSensor(int interrupts) {

	/* Enable gesture mode
	 Set ENABLE to 0 (power off)
	 Set WTIME to 0xFF
	 Set AUX to LED_BOOST_300
	 Enable PON, WEN, PEN, GEN in ENABLE
	 */
	resetGestureParameters();
	if (!i2c1_write(APDS9960_WTIME, 0xFF)) {
		return 0;
	}
	if (!i2c1_write(APDS9960_PPULSE, DEFAULT_GESTURE_PPULSE)) {
		return 0;
	}
	//if (!setLEDBoost(LED_BOOST_300)) {
	if (!setLEDBoost(DEFAULT_LED_BOOST)) {
		return 0;
	}
	if (interrupts) {
		if (!setGestureIntEnable(1)) {
			return 0;
		}
	} else {
		if (!setGestureIntEnable(0)) {
			return 0;
		}
	}
	if (!setGestureMode(1)) {
		return 0;
	}
	if (!enablePower()) {
		return 0;
	}
	if (!setMode(WAIT, 0)) {
		return 0;
	}
	if (!setMode(PROXIMITY, 1)) {
		return 0;
	}
	if (!setMode(GESTURE, 1)) {
		return 0;
	}

	return 1;
}
