==> turumputum/moduleBox/components/swiper/apds9960.c <==
#include "stdlib.h"
#include "apds9960.h"
#include "stdio.h"
#include "string.h"
#include "esp_log.h"
#include "driver/i2c.h"
#include "driver/gpio.h"
#include "esp_timer.h"
#include "sdkconfig.h"
#include "reporter.h"
#include "stateConfig.h"
#define LOG_LOCAL_LEVEL ESP_LOG_DEBUG
#define I2C_MASTER_TIMEOUT_MS       1000

esp_err_t i2c1_read(i2c_port_t  i2cPort, uint8_t reg_addr, uint8_t *data, uint8_t lenght) {
	
	//if (HAL_I2C_Mem_Read(bus, sensorAdr, memAdr, 1, regData, lenght,HAL_MAX_DELAY) == ESP_OK) {
	return i2c_master_write_read_device(i2cPort, APDS9960_I2C_ADDR, &reg_addr, 1, data, lenght, I2C_MASTER_TIMEOUT_MS / portTICK_PERIOD_MS);

}

esp_err_t  i2c1_write(i2c_port_t  i2cPort, uint8_t reg_addr, uint8_t data) {
	//if (HAL_I2C_Mem_Write(&hi2c1, sensorAdr, memAdr, 1, &regData, 1, HAL_MAX_DELAY) == ESP_OK) {
	esp_err_t ret;
    uint8_t write_buf[2] = {reg_addr, data};

    ret = i2c_master_write_to_device(i2cPort, APDS9960_I2C_ADDR, write_buf, sizeof(write_buf), I2C_MASTER_TIMEOUT_MS / portTICK_PERIOD_MS);

    return ret;
}

esp_err_t apds9960init(i2c_port_t i2c_port) {
	uint8_t id;
	//ledSetLeftLed(LED_ON);

	/* Initialize I2C */
	if(DEBUG){
		ESP_LOGD(TAG,"Init gesture sensor start  ");
	}

	/* Read ID register and check against known values for APDS-9960 */
	if (i2c1_read(i2c_port,APDS9960_ID, &id, 1)!=ESP_OK) {
		ESP_LOGE(TAG,"read sensor ID failed at %d ", id);
	}else{
		if(DEBUG){
			ESP_LOGD(TAG,"Sensor ID is %d ", id);
		}
	}

	/* Set ENABLE register to 0 (disable all features) */
	if (setMode(i2c_port, ALL, OFF)!=ESP_OK) {
		return ESP_FAIL;
	}

	/* Set default values for ambient light and proximity registers */
	if (i2c1_write(i2c_port,APDS9960_ATIME, DEFAULT_ATIME)!=ESP_OK) {
		return ESP_FAIL;
	}
	if (i2c1_write(i2c_port,APDS9960_WTIME, DEFAULT_WTIME)!=ESP_OK) {
		return ESP_FAIL;
	}
	if (i2c1_write(i2c_port,APDS9960_PPULSE, DEFAULT_PROX_PPULSE)!=ESP_OK) {
		return ESP_FAIL;
	}
	if (i2c1_write(i2c_port,APDS9960_POFFSET_UR, DEFAULT_POFFSET_UR)!=ESP_OK) {
		return ESP_FAIL;
	}
	if (i2c1_write(i2c_port,APDS9960_POFFSET_DL, DEFAULT_POFFSET_DL)!=ESP_OK) {
		return ESP_FAIL;
	}
	if (i2c1_write(i2c_port,APDS9960_CONFIG1, DEFAULT_CONFIG1)!=ESP_OK) {
		return ESP_FAIL;
	}
	if (setLEDDrive(i2c_port, DEFAULT_LDRIVE)!=ESP_OK) {
		return ESP_FAIL;
	}
	if (setProximityGain(i2c_port, DEFAULT_PGAIN)!=ESP_OK) {
		return ESP_FAIL;
	}
	if (setAmbientLightGain(i2c_port, DEFAULT_AGAIN)!=ESP_OK) {
		return ESP_FAIL;
	}
	if (setProxIntLowThresh(i2c_port, DEFAULT_PILT)!=ESP_OK) {
		return ESP_FAIL;
	}
	if (setProxIntHighThresh(i2c_port, DEFAULT_PIHT)!=ESP_OK) {
		return ESP_FAIL;
	}
	if (setLightIntLowThreshold(i2c_port, DEFAULT_AILT)!=ESP_OK) {
		return ESP_FAIL;
	}
	if (setLightIntHighThreshold(i2c_port, DEFAULT_AIHT)!=ESP_OK) {
		return ESP_FAIL;
	}
	if (i2c1_write(i2c_port,APDS9960_PERS, DEFAULT_PERS)!=ESP_OK) {
		return ESP_FAIL;
	}
	if (i2c1_write(i2c_port,APDS9960_CONFIG2, DEFAULT_CONFIG2)!=ESP_OK) {
		return ESP_FAIL;
	}
	if (i2c1_write(i2c_port,APDS9960_CONFIG3, DEFAULT_CONFIG3)!=ESP_OK) {
		return ESP_FAIL;
	}

	/* Set default values for gesture sense registers */
	if (setGestureEnterThresh(i2c_port, DEFAULT_GPENTH)!=ESP_OK) {
		return ESP_FAIL;
	}
	if (setGestureExitThresh(i2c_port, DEFAULT_GEXTH)!=ESP_OK) {
		return ESP_FAIL;
	}
	if (i2c1_write(i2c_port,APDS9960_GCONF1, DEFAULT_GCONF1)!=ESP_OK) {
		return ESP_FAIL;
	}
	if (setGestureGain(i2c_port, DEFAULT_GGAIN)!=ESP_OK) {
		return ESP_FAIL;
	}
	if (setGestureLEDDrive(i2c_port, DEFAULT_GLDRIVE)!=ESP_OK) {
		return ESP_FAIL;
	}
	if (setGestureWaitTime(i2c_port, DEFAULT_GWTIME)!=ESP_OK) {
		return ESP_FAIL;
	}

	if (i2c1_write(i2c_port,APDS9960_GOFFSET_U, DEFAULT_GOFFSET)!=ESP_OK) {
		return ESP_FAIL;
	}
	if (i2c1_write(i2c_port,APDS9960_GOFFSET_D, DEFAULT_GOFFSET)!=ESP_OK) {
		return ESP_FAIL;
	}
	if (i2c1_write(i2c_port,APDS9960_GOFFSET_L, DEFAULT_GOFFSET)!=ESP_OK) {
		return ESP_FAIL;
	}
	if (i2c1_write(i2c_port,APDS9960_GOFFSET_R, DEFAULT_GOFFSET)!=ESP_OK) {
		return ESP_FAIL;
	}

	setGpulseConfig(i2c_port, DEFAULT_GPULSE_LEN, DEFAULT_GPULSE_COUNT);

	if (i2c1_write(i2c_port,APDS9960_GCONF3, DEFAULT_GCONF3)!=ESP_OK) {
		return ESP_FAIL;
	}
	if (setGestureIntEnable(i2c_port, DEFAULT_GIEN)!=ESP_OK) {
		return ESP_FAIL;
	}

	return ESP_OK;
}

esp_err_t enableGestureSensor(i2c_port_t i2c_port, int interrupts) {

	/* Enable gesture mode
	 Set ENABLE to 0 (power off)
	 Set WTIME to 0xFF
	 Set AUX to LED_BOOST_300
	 Enable PON, WEN, PEN, GEN in ENABLE
	 */
	if (i2c1_write(i2c_port,APDS9960_WTIME, 0xFF)!=ESP_OK) {
		return ESP_FAIL;
	}
	if (i2c1_write(i2c_port,APDS9960_PPULSE, DEFAULT_GESTURE_PPULSE)!=ESP_OK) {
		return ESP_FAIL;
	}
	//if (!setLEDBoost(LED_BOOST_300)) {
	//if (!setLEDBoost(DEFAULT_LED_BOOST)) {
	//return 0;
	//}
	if (interrupts) {
		if (setGestureIntEnable(i2c_port, 1)!=ESP_OK) {
			return ESP_FAIL;
		}
	} else {
		if (setGestureIntEnable(i2c_port,0)!=ESP_OK) {
			return ESP_FAIL;
		}
	}
	if (setGestureMode(i2c_port,1)!=ESP_OK) {
		return ESP_FAIL;
	}
	if (enablePower(i2c_port)!=ESP_OK) {
		return ESP_FAIL;
	}
	if (setMode(i2c_port,WAIT, 0)!=ESP_OK) {
		return ESP_FAIL;
	}
	if (setMode(i2c_port,PROXIMITY, 0)!=ESP_OK) {
		return ESP_FAIL;
	}
	if (setMode(i2c_port,GESTURE, 1)!=ESP_OK) {
		return ESP_FAIL;
	}

	return ESP_OK;
}
